<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.ServiceActivity">

    <Button
        android:id="@+id/local_binder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_binder"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="330dp" />

    <Button
        android:id="@+id/remote_binder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_binder"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="378dp" />

    <TextView
        android:id="@+id/bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/bound"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stop_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_heavy_job"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="446dp" />

    <TextView
        android:id="@+id/started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/started"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_heavy_job"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="513dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="started,start_job,stop_job,bound,local_binder,remote_binder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>