<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_components"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        app:layout_constraintBottom_toTopOf="@+id/activity_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_component"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity" />

    <Button
        android:id="@+id/service_component"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service" />

    <Button
        android:id="@+id/broadcast_receiver_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_receiver" />

    <Button
        android:id="@+id/content_provider_component"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_provider" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="activity_component,service_component,broadcast_receiver_component,content_provider_component"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>