<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.intent.IntentsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        app:layout_constraintBottom_toTopOf="@+id/start_for_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_safe_intent" />

    <Button
        android:id="@+id/start_for_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_for_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_email" />

    <Button
        android:id="@+id/launch_unsafe_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsafe_nested_intent"
        app:layout_constraintBottom_toTopOf="@+id/launch_safe_intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_text" />

    <Button
        android:id="@+id/launch_safe_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_nested_intent"
        app:layout_constraintBottom_toTopOf="@+id/send_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_unsafe_intent" />

    <Button
        android:id="@+id/share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        app:layout_constraintBottom_toTopOf="@+id/launch_unsafe_intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>