<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".broadcast.BroadcastReceiverActivity">

    <LinearLayout
        android:id="@+id/normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/ordered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/custom_normal_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_broadcast" />

        <Button
            android:id="@+id/do_short_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/do_short_job" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ordered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal">

        <TextView
            android:id="@+id/custom_ordered_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordered_broadcast" />

        <Button
            android:id="@+id/roll_the_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_the_dice" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>